# criterion-for-human

./: Cargo.toml  LICENSE-MIT  README.md  USAGE.md
.github/workflows/: benchmark.yml  ci.yml
benches/: example_benchmark.rs
examples/: output.md  sample_output.json
src/: main.rs
