[package]
name = "criterion-for-human"
version = "0.1.0"
edition = "2021"
authors = ["Oyami-Srk"]
description = "Render criterion JSON output in fancy yet detailed markdown tables for humans"
repository = "https://github.com/Oyami-Srk/criterion-for-human"
license = "MIT"
keywords = ["criterion", "benchmark", "markdown", "testing"]
categories = ["development-tools::testing", "command-line-utilities"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "example_benchmark"
harness = false
